# todomvc-tests

./: .gitignore  Dockerfile  config.jenkins.env  config.local.env  config.prod.env  config.py  config.remote.env  config.stage.env  pyproject.toml  testplan.json
docker-in-jenkins/: compose.yaml
etc/selenoid/: compose.yaml
etc/selenoid/jenkins-image/: Dockerfile  email-html.template
etc/selenoid/jenkins-image/init.groovy.d/: allure-config.groovy
tests/: conftest.py  test_common_functionality.py  test_operations_at_all_filter.py  test_proof_of_concept.py  test_todo_management.py  test_todomvc.py
todomvc_tests/: todo.py
todomvc_tests/model/: __init__.py  todomvc.py  todos.py
todomvc_tests/model/controls/: field.py
todomvc_tests/model/pages/: todomvc_all.py  todos.py
