[tool.poetry]
name = "todomvc-tests"
version = "0.1.0"
description = ""
authors = ["Irina Tenitska <moore.evelyn13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selene = {version = "^2.*", allow-prereleases = true}
pydantic = "^1.8.2"
pytest-xdist = "^2.3.0"
python-dotenv = "^0.18.0"
allure-pytest = "^2.9.44"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

importlib-metadata = {version = "^0.23", python = "<3.8"}